added icons for mandatory field and processorCommon

--- a/UI/src/app/dashboard/kpi-card/kpi-card.component.html
+++ b/UI/src/app/dashboard/kpi-card/kpi-card.component.html
@@ -182,7 +182,7 @@
 
 <p-dialog [header]="kpiData?.kpiName" [(visible)]="displayConfigModel" [modal]="true" styleClass="field-mapping">
     <hr>
-    <div class="p-d-flex p-mb-3">
+    <div class="p-d-flex p-mt-4 p-mb-4">
         <b class="p-mr-3"><span>*</span>Mandatory Fields</b>
         <b><i class="fas fa-sync-alt p-mr-1"></i>Requires processor run</b>
     </div>
