--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
@@ -21,11 +21,11 @@
         <p-accordionTab *ngFor="let section of fieldMappingSectionList" [header]="section">
             <div class="p-p-0">
                 <div class="p-mb-3 p-d-flex p-align-center p-justify-between" *ngFor="let field of formConfig[section]">
-                    
+
                     <label class="field-title">
                         <span *ngIf="field?.processorCommon"><i class="fas fa-sync-alt p-mr-1"></i></span>
                         {{field['fieldLabel']}}&nbsp;
-                        <span *ngIf="field?.mandatory">*</span>
+                        <span *ngIf="field?.mandatory" class="p-mr-1">*</span>
                         <span class="fa fa-info-circle"
                             aria-hidden="true" pTooltip="<span>
                                             Definition:
@@ -34,7 +34,7 @@
                                              {{field.tooltip.kpiImpacted ? field.tooltip.kpiImpacted : '' }}
                                             </span>" tooltipPosition="top" tooltipEvent="hover"
                             tooltipStyleClass="tooltiptext" [escape]="false"></span>
-                            
+
                     </label>
                     <ng-container *ngIf="!field?.nestedFields else nestedFieldContainer">
                         <div class="w-60vw">
