Fix for DTS-32221

--- a/UI/src/app/shared-module/conditional-input/conditional-input.component.css
+++ b/UI/src/app/shared-module/conditional-input/conditional-input.component.css
@@ -12,3 +12,7 @@
 :host ::ng-deep .count-box {
     margin-left: 20px;
 }
+
+:host ::ng-deep .p-inputnumber-buttons-horizontal .p-inputnumber-input {
+    pointer-events: none;
+}
