--- a/UI/src/app/dashboard/kpi-card/kpi-card.component.html
+++ b/UI/src/app/dashboard/kpi-card/kpi-card.component.html
@@ -172,7 +172,13 @@
     </div>
 </p-overlayPanel>
 
-<p-dialog [header]="kpiData?.kpiName" [(visible)]="displayConfigModel" [modal]="true" styleClass="field-mapping">
+<p-dialog [(visible)]="displayConfigModel" [modal]="true" styleClass="field-mapping">
+    <ng-template pTemplate="header">
+        <div class="inline-flex align-items-center justify-content-center gap-2">
+            <p class="font-bold white-space-nowrap">{{kpiData?.kpiName}}</p>
+            <span class="font-bold white-space-nowrap">Last Sync: {{lastSyncTime}}</span>
+        </div>
+    </ng-template>
     <hr>
     <ng-template pTemplate="content">
         <app-field-mapping-form #fieldMappingForm
