--- a/UI/src/app/dashboard/kpi-card/kpi-card.component.html
+++ b/UI/src/app/dashboard/kpi-card/kpi-card.component.html
@@ -174,6 +174,10 @@
 
 <p-dialog [header]="kpiData?.kpiName" [(visible)]="displayConfigModel" [modal]="true" styleClass="field-mapping">
     <hr>
+    <div class="p-d-flex p-mt-4 p-mb-4">
+        <b class="p-mr-5"><span>*</span>Mandatory Fields</b>
+        <b><i class="fas fa-sync-alt p-mr-1"></i>Requires processor run</b>
+    </div>
     <ng-template pTemplate="content">
         <app-field-mapping-form #fieldMappingForm
             *ngIf="fieldMappingConfig?.length > 0 && this.selectedToolConfig?.length > 0 && !loading"
