--- a/UI/src/app/component/grouped-column-plus-line-chart/grouped-column-plus-line-chart.component.css
+++ b/UI/src/app/component/grouped-column-plus-line-chart/grouped-column-plus-line-chart.component.css
@@ -95,3 +95,19 @@
   background-color: #fff;
   z-index: 1001;
 }
+
+:host::ng-deep.legend-tooltip{
+  position: absolute;
+  text-align: center;
+  max-width: 220px;
+  padding: 5px;
+  font-size: 10px;
+  background: rgba(255, 255, 255, 0.95);
+  color: var(--color-gray-34);
+  border-radius: 5px;
+  box-shadow: 0px 0px 6px #b9b9bb;
+  z-index: 1;
+  display: none;
+  justify-content: space-evenly;
+  pointer-events: none;
+}
