spell issue fixed

--- a/UI/src/app/config/dashboard-config/dashboard-config.component.html
+++ b/UI/src/app/config/dashboard-config/dashboard-config.component.html
@@ -74,7 +74,7 @@
                 </div>
             </form>
             <div class="p-d-flex p-align-center p-justify-center no-sprint-msg" *ngIf="noProjectsForSelectedCategory">
-                <h2 class="msg">Projects are not availiable for {{selectedTab}} category</h2>
+                <h2 class="msg">Projects are not available for {{selectedTab}} category</h2>
               </div>
         </p-tabPanel>
     </p-tabView>
