replicate html code of groupstack chart from backlog to milestone comp

--- a/UI/src/app/dashboard/milestone/milestone.component.html
+++ b/UI/src/app/dashboard/milestone/milestone.component.html
@@ -83,13 +83,12 @@
                                       [ngSwitch]="kpi?.kpiDetail?.chartType"
                                       *ngIf="ifKpiExist(kpi.kpiId) != -1; else loader">
                                       <ng-container *ngIf="kpiChartData[kpi?.kpiId]?.length > 0   ; else noData">
-                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'"
-                                          [xCaption]="kpi?.kpiDetail?.xaxisLabel"
-                                          [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
-                                          [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
-                                          [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
-                                        </app-groupstackchart>
+                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'" [legendType]="'normal'"
+                                        [xCaption]="kpi?.kpiDetail?.xaxisLabel" [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                        [unit]="kpi?.kpiDetail?.kpiUnit" [filter]="kpiSelectedFilterObj[kpi?.kpiId]"
+                                        [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                        [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [kpiId]="kpi?.kpiId"
+                                        [selectedtype]="selectedtype" [activeTab]="activeIndex" [isAggregationStacks] = "(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
                                         <app-group-bar-chart *ngSwitchCase="'CumulativeMultilineChart'"
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
@@ -234,13 +233,13 @@
                                       [ngSwitch]="kpi?.kpiDetail?.chartType"
                                       *ngIf="ifKpiExist(kpi.kpiId) != -1; else loader">
                                       <ng-container *ngIf="kpiChartData[kpi?.kpiId]?.length > 0   ; else noData">
-                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'"
-                                          [xCaption]="kpi?.kpiDetail?.xaxisLabel"
-                                          [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
-                                          [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
-                                          [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
-                                        </app-groupstackchart>
+                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'" [legendType]="'normal'"
+                                        [xCaption]="kpi?.kpiDetail?.xaxisLabel" [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                        [unit]="kpi?.kpiDetail?.kpiUnit" [filter]="kpiSelectedFilterObj[kpi?.kpiId]"
+                                        [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                        [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [kpiId]="kpi?.kpiId"
+                                        [selectedtype]="selectedtype" [activeTab]="activeIndex" [isAggregationStacks] = "(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
+                                      
                                         <app-group-bar-chart *ngSwitchCase="'CumulativeMultilineChart'"
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
@@ -385,13 +384,13 @@
                                       [ngSwitch]="kpi?.kpiDetail?.chartType"
                                       *ngIf="ifKpiExist(kpi.kpiId) != -1; else loader">
                                       <ng-container *ngIf="kpiChartData[kpi?.kpiId]?.length > 0   ; else noData">
-                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'"
-                                          [xCaption]="kpi?.kpiDetail?.xaxisLabel"
-                                          [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
-                                          [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
-                                          [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
-                                        </app-groupstackchart>
+                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'" [legendType]="'normal'"
+                                        [xCaption]="kpi?.kpiDetail?.xaxisLabel" [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                        [unit]="kpi?.kpiDetail?.kpiUnit" [filter]="kpiSelectedFilterObj[kpi?.kpiId]"
+                                        [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                        [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [kpiId]="kpi?.kpiId"
+                                        [selectedtype]="selectedtype" [activeTab]="activeIndex" [isAggregationStacks] = "(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
+                                      
                                         <app-group-bar-chart *ngSwitchCase="'CumulativeMultilineChart'"
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
@@ -538,13 +537,13 @@
                                       [ngSwitch]="kpi?.kpiDetail?.chartType"
                                       *ngIf="ifKpiExist(kpi.kpiId) != -1; else loader">
                                       <ng-container *ngIf="kpiChartData[kpi?.kpiId]?.length > 0   ; else noData">
-                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'"
-                                          [xCaption]="kpi?.kpiDetail?.xaxisLabel"
-                                          [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
-                                          [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                          [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList"
-                                          [selectedtype]="selectedtype" [kpiId]="kpi?.kpiId" [legendType]="'normal'">
-                                        </app-groupstackchart>
+                                        <app-groupstackchart *ngSwitchCase="'stackedColumn'" [legendType]="'normal'"
+                                        [xCaption]="kpi?.kpiDetail?.xaxisLabel" [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                        [unit]="kpi?.kpiDetail?.kpiUnit" [filter]="kpiSelectedFilterObj[kpi?.kpiId]"
+                                        [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                        [data]="kpiChartData[kpi?.kpiId]" [color]="chartColorList" [kpiId]="kpi?.kpiId"
+                                        [selectedtype]="selectedtype" [activeTab]="activeIndex" [isAggregationStacks] = "(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
+                                      
                                         <app-group-bar-chart *ngSwitchCase="'CumulativeMultilineChart'"
                                           [xCaption]="kpi?.kpiDetail?.xaxisLabel"
                                           [yCaption]="kpi?.kpiDetail?.yaxisLabel" [unit]="kpi?.kpiDetail?.kpiUnit"
