DTS-32001_overlap issue

--- a/UI/src/app/component/group-bar-chart/group-bar-chart.component.css
+++ b/UI/src/app/component/group-bar-chart/group-bar-chart.component.css
@@ -150,7 +150,7 @@
   #svgLegend{
     height: 20px;
   }
-  ::ng-deep div.normal-legend{
+  :host::ng-deep div.normal-legend{
     font-size: 10px;
     color: var(--color-gray-34);
     position: absolute;
