icon added with last sync date and time

--- a/UI/src/app/dashboard/kpi-card/kpi-card.component.css
+++ b/UI/src/app/dashboard/kpi-card/kpi-card.component.css
@@ -210,3 +210,11 @@
     -webkit-font-smoothing: antialiased;
 }
 
+.green {
+    color: var(--color-green);
+}
+
+.red {
+    color: var(--color-red);
+}
+
